<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             >


            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitCenter"
                android:src="@drawable/login_photo"
                />
            <!--android:layout_alignParentStart="true"-->



            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputs"
                android:hint="Email..."
                android:inputType="textEmailAddress"
                android:padding="4dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:drawableLeft="@drawable/email" />



            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputs"
                android:hint="Password..."
                android:inputType="textPassword"
                android:padding="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:drawableLeft="@drawable/password" />


            <TextView
                android:id="@+id/forget_password_lonk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:text="@string/login"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons"
                />


            <TextView
                android:id="@+id/need_new_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/need_new_account"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/login_using"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or_login_using_your"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                />

            <Button
                android:id="@+id/phone_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:text="@string/phone"
                android:textSize="14sp"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons"
                android:drawableStart="@drawable/phone"
                />


        </LinearLayout>



    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>